# SystemIntegration_individual

./: .gitignore  README.md
Week1_Homework/: aboutme.csv  aboutme.json  parser.py  parser.rb
Week2_Homework1/node/: app.js  package-lock.json  package.json
Week2_Homework1/python/: aboutme.csv  main.py  message.txt  pyproject.toml
Week2_Homework2/node/: app.js
Week2_Homework2/node/routers/: docs.js
Week2_Homework2/python/: main.py
